--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -2,7 +2,7 @@
 name = "app"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["Pravesh Chapgain<spravesh1818@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
